@@ -1,3 +1,10 @@
+2012-06-06  Sebastien Binet  <binet@cern.ch>
+
+	* tagging PyUtils-00-12-08
+	* correctly catch pool_insertFileToCatalog errors and propagate
+	* M python/AthFile/impl.py
+	* M bin/pool_insertFileToCatalog.py
+
 2012-05-29  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-12-07
